<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.kgfsl.ecampusstudent.Activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">


                    <LinearLayout

                        android:id="@+id/home_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_profile" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="@string/title_profile"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/home_attendance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_attendance" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="@string/title_attendance"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/home_announcement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_announcement" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="@string/title_announcement"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">


                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/home_fees"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_fees" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="@string/title_fees"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>

                    <LinearLayout
                        android:visibility="gone"
                        android:id="@+id/home_evalvation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_evalution" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="@string/title_evalvation"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>

                    <LinearLayout
android:id="@+id/home_assignment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_assignment" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Homework"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/home_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_onlineexam" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Gallery"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">
                    <LinearLayout
                        android:id="@+id/home_todayclass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_todaysclass" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Today's Class"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>





                    <LinearLayout
                        android:id="@+id/home_timetable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:visibility="gone"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_timetable" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Time Table"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>


                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">


                    <LinearLayout
                        android:id="@+id/home_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_feedback" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Feedback"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/home_aboutus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_about" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="About us"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>
                    <LinearLayout
android:visibility="gone"
                        android:id="@+id/home_contacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/circle_menu"
                            android:src="@drawable/ic_action_contacts" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:text="Contacts"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                            android:textColor="@color/colorTextPrimary" />


                    </LinearLayout>



                </LinearLayout>

                <LinearLayout
                    android:id="@+id/home_logout"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/circle_menu"
                        android:src="@drawable/ic_action_logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:singleLine="true"
                        android:text="Logout"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:textColor="@color/colorTextPrimary" />


                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
